feat: adicionado lógica criar cargo
